--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
-    "chai": "^5.1.2"
+    "chai": "^5.1.2",
+    "dotenv": "^16.4.5"
   }
 }
